fdo#80514 LO crashes on opening; tries to remove a para with NumPicBullet

LO crashes while opening the issue file as, an extra Num Pic Bullets is
attached to the dummy para. All NumPicBullets were disposed in
dtor of ListsManager.
LO tries to remove dummy para after the section, while the pic bullet is still attached to it.
This causes Lo to crash while removing the paragraph.

Added a 'ListsManager::DisposeNumPicBullets( )' to remove the extra bullets from the document
Added the issue file in sw/qa/core/data/ooxml/pass/

Change-Id: I578f48364dcb4ff939fa3800e90db88a99d5ca1a